manifests/production/celery-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aisysrev-celery-dep
  namespace: aisysrev
  annotations:
    alpha.image.policy.openshift.io/resolve-names: "*"
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"aisysrev:backend-production","namespace":"aisysrev"},"fieldPath":"spec.template.spec.containers[?(@.name==\"aisysrev\")].image","pause":"false"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aisysrev-celery
  template:
    metadata:
      labels:
        app: aisysrev-celery
    spec:
      containers:
        - name: aisysrev
          image: aisysrev:backend-production
          imagePullPolicy: Always
          command: ["/app/.venv/bin/celery", "-A", "src.worker", "worker", "--loglevel=info", "--concurrency=2"]
          resources:
            limits:
              memory: 1.5Gi
              cpu: 500m
            requests:
              memory: 512Mi
              cpu: 250m
