manifests/production/redis-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aisysrev-redis-dep
  namespace: aisysrev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aisysrev-redis
  template:
    metadata:
      labels:
        app: aisysrev-redis
    spec:
      serviceAccountName: redis
      containers:
        - name: redis
          image: redis:8.10.2-alpine@sha256:3811787313eba226a2ef38658c6ccb91cd5e110edc89c37767de373120a0e5a0
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            periodSeconds: 10
          resources:
            limits:
              memory: 256Mi
              cpu: 100m
            requests:
              memory: 64Mi
              cpu: 50m
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: aisysrev-redis-pvc
