manifests/production/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    cert-manager.io/issuer: le-prod-dns01
  labels:
    type: external
  name: aisysrev-helsinki-fi-ingress
  namespace: aisysrev
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - aisysrev.helsinki.fi
      secretName: aisysrev-helsinki-fi
  rules:
    - host: aisysrev.helsinki.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 9080
